test/good/arrays/comprehension13.px

print [not x for x in false..true]
print [x for x in true...false by -2]
