test/bad/arrays/comprehension06.px

[for x in 0...10 by true yield x]
